--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vega-Lite Bar Chart</title>
+    <title>Map View Ex1</title>
     <meta charset="utf-8" />
 
     <script src="https://cdn.jsdelivr.net/npm/vega@5.17.0"></script>
@@ -24,7 +24,7 @@
 
     <script type="text/javascript">
       // Assign the specification to a local variable vlSpec.
-      var vlSpec = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/visualization.vl.json"
+      var vlSpec = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_9/visualization.vl.json"
 
       // Embed the visualization in the container with id `vis`
       vegaEmbed('#vis', vlSpec);
