--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </style>
   </head>
   <body>
-    <h1>Template for Embedding Vega-Lite Visualization</h1>
+    <h1>Vega-Lite Visualization</h1>
     <!-- Container for the visualization -->
     <div id="vis"></div>
 
     <script type="text/javascript">
       // Assign the specification to a local variable vlSpec.
-      var vlSpec = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_9/visualization.vl.json"
+      var vlSpec = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_9/visualization_3.vl.json"
 
       // Embed the visualization in the container with id `vis`
       vegaEmbed('#vis', vlSpec);
