--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       .description h2, h1{
         margin-top:0px;
       }
-      .description-right {
-        padding-left: 20px;
+      .description-bottom {
+        padding-top: 20px;
       }
       .description-left{
         padding-right: 20px;
