--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
      <!-- pure grid group -->
       <div class="pure-g">
         <div class="pure-u-1-1">
-          <h1>Final Assignment Example Look</h1>
+          <h1>Impact of COVID-19 on Australia Tourism Industry</h1>
           <p>Test For sub-header</p>
         </div>
       </div>
@@ -89,11 +89,11 @@
       
     <!-- pure grid group -->
       <div class="pure-g">
-          <div class="pure-u-2-3">
+          <div class="pure-u-1-1">
             <div id="vis2"  class="vis-container"></div>
           </div>
-          <div class="pure-u-1-3">
-            <div class="description description-right">
+          <div class="pure-u-1-1">
+            <div class="description description-bottom">
               <h2>This is the second section</h2>
               <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
             </div>
@@ -113,7 +113,7 @@
 
     <script type="text/javascript">
       // Assign the specification to a local variable vlSpec.
-      var specVis1 = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_10/visualization.vl.json";
+      var specVis1 = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_9/visualization_better_final.vl.json";
       var specVis2= "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_10/visualization_2.vl.json";
       
       // Embed the visualization in the container with id `vis`
