--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           </div>
         <div class="pure-u-1-1">
             <div class="description description-left">
-              <h2>This is the first section</h2>
-              <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+              <h2>Reduction of Tourist in Australia</h2>
+              <p>Only 1st 5 month of 2020 and 2019 is compared as that is the lastest data we could get online and free.</p>
             </div>
           </div>
       </div>
@@ -94,8 +94,8 @@
           </div>
           <div class="pure-u-1-1">
             <div class="description description-bottom">
-              <h2>This is the second section</h2>
-              <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+              <h2>Impact of COVID-19 to Local Industry</h2>
+              <p>This idiom clearly encode the impact of Covid-19 to local businesses as well as tourism related industry.</p>
             </div>
           </div>
 
