--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       }
       h1{
         font-weight: 900;
+        text-align: "center";
       }
        body{
          background-color: lightgray;
@@ -67,7 +68,7 @@
      <!-- pure grid group -->
       <div class="pure-g">
         <div class="pure-u-1-1">
-          <h1>Impact of COVID-19 on Australia Tourism Industry</h1>
+          <h1>Impact of COVID-19 on Australia Economic</h1>
           <p>Test For sub-header</p>
         </div>
       </div>
@@ -75,12 +76,12 @@
       
     <!-- pure grid group -->
       <div class="pure-g">
-          <div class="pure-u-1-1">
-            <div id="vis1" class="vis-container"></div>
-          </div>
         <div class="pure-u-1-1">
             <div class="description description-left">
               <h2>Reduction of Tourist in Australia</h2>
+                <div class="pure-u-1-1">
+                  <div id="vis1" class="vis-container"></div>
+                </div>
               <p>Only 1st 5 month of 2020 and 2019 is compared as that is the lastest data we could get online and free.</p>
             </div>
           </div>
