--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       }
       h1{
         font-weight: 900;
-        text-align: "center";
+        text-align: center;
       }
        body{
          background-color: lightgray;
@@ -114,7 +114,7 @@
 
     <script type="text/javascript">
       // Assign the specification to a local variable vlSpec.
-      var specVis1 = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_9/visualization_better_final.vl.json";
+      var specVis1 = "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Final_Assignment/Chart/Map_1.vl.json";
       var specVis2= "https://raw.githubusercontent.com/angzixuan/FIT3179_Data_Visualisation/main/Charts/Week_10/visualization_2.vl.json";
       
       // Embed the visualization in the container with id `vis`
