--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         font-weight: 900;
         text-align: center;
       }
+      p1{
+        text-align: center;
+        color: lightgray;
+      }
        body{
          background-color: lightgray;
        }
@@ -68,8 +72,8 @@
      <!-- pure grid group -->
       <div class="pure-g">
         <div class="pure-u-1-1">
-          <h1>Impact of COVID-19 on Australia Economic</h1>
-          <p>Test For sub-header</p>
+          <h1>Impact of COVID-19 on Economy of Australia</h1>
+          <p class="p1">Test For sub-header</p>
         </div>
       </div>
     <!-- end pure grid group -->
