--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       }
       .p1{
         text-align: center;
-        color: lightgray;
+        color: gray;
       }
       .vis-container{
         width: 100%;
@@ -73,7 +73,7 @@
       <div class="pure-g">
         <div class="pure-u-1-1">
           <h1>Impact of COVID-19 on Economy of Australia</h1>
-          <p class="p1">Test For sub-header</p>
+          <p class="p1">COVID-19 is not only a global pandemic, it is also a public health crisis that affect global economy significantly.</p>
         </div>
       </div>
     <!-- end pure grid group -->
