--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="pure-g">
         <div class="pure-u-1-1">
           <h1>Impact of COVID-19 on Economy of Australia</h1>
-          <p class="p1">COVID-19 is not only a global pandemic, it is also a public health crisis that affect global economy significantly.</p>
+          <p class="p1">COVID-19 is not only a global pandemic, it is also a public health crisis that affect financial market and global economy significantly. Chain effect like reduction in income, a rise in unemployment, and disruptions in the transportation, service, and manufacturing industries are among the consequences of the disease mitigation measures that have been implemented in many countries. It has become clear that most governments in the world underestimated the risks of rapid COVID-19 spread and were mostly reactive in their crisis response. As disease outbreaks are not likely to disappear in the near future, proactive international actions are required to not only save lives but also protect economic prosperity.</p>
         </div>
       </div>
     <!-- end pure grid group -->
