--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       }
       .p1{
         text-align: center;
-        color: gray;
+        color: lightgray;
       }
       .vis-container{
         width: 100%;
