--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       .p1{
         text-align: center;
         color: lightgray;
+        width: 60%
       }
       .vis-container{
         width: 100%;
@@ -82,7 +83,7 @@
       <div class="pure-g">
         <div class="pure-u-1-1">
             <div class="description description-left">
-              <h2>Reduction of Tourist in Australia</h2>
+              <h2>Global GDP of 2020 Compared to 2019</h2>
                 <div class="pure-u-1-1">
                   <div id="vis1" class="vis-container"></div>
                 </div>
