--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
          padding-top: 35px;
       }
       .p1{
-        text-align: center;
         color: lightgray;
-        width: 60%
+        width: 60%;
+        text-align: center;
       }
       .vis-container{
         width: 100%;
