--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       .p1{
         color: lightgray;
         width: 80%;
-        align-items: center;
+        justify-contents: center;
       }
       .vis-container{
         width: 100%;
