--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       }
       .p1{
         color: lightgray;
-        width: 80%;
-        justify-contents: center;
+        text-align: center;
       }
       .vis-container{
         width: 100%;
