--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         color: lightgray;
         text-align: center;
       }
+      .au{
+        color: #EC8769 
+      }
       .vis-container{
         width: 100%;
       }
@@ -86,7 +89,7 @@
                 <div class="pure-u-1-1">
                   <div id="vis1" class="vis-container"></div>
                 </div>
-              <p>Only 1st 5 month of 2020 and 2019 is compared as that is the lastest data we could get online and free.</p>
+              <p>In year of <b>2020</b>, many country economy had been significantly impacted by the emerge of COVID-19, global pandemic. Compared to 2019, the global GDP growth was majorly reduced. As shown in the map, most of the country like China, United State, Canada and etc. get affected by the pandemic. <b class="au">Australia</b> was unable to escape from the reduction list.</p>
             </div>
           </div>
       </div>
@@ -100,7 +103,7 @@
           <div class="pure-u-1-1">
             <div class="description description-bottom">
               <h2>Impact of COVID-19 to Local Industry</h2>
-              <p>This idiom clearly encode the impact of Covid-19 to local businesses as well as tourism related industry.</p>
+              <p>This idiom clearly encode the impact of Covid-19 to local businesses as well as tourism related industry.</p> 
             </div>
           </div>
 
