--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       }
       p{
         line-height: 1.5;
+        text-indent: 30px;
       }
        body{
          background-color: lightgray;
