--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       .p1{
         color: lightgray;
         text-align: center;
+        margin-left: auto;
+        margin-right: auto;
       }
       .au{
         color: #EC8769 
