--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
       }
       p{
         line-height: 1.5;
-        text-indent: 30px;
       }
        body{
          background-color: lightgray;
        }
+      .m1{
+        text-indent: 30px;
+      }
        .page{
          width: 1000px;    
          background-color: white;   
@@ -95,8 +97,8 @@
                 <div class="pure-u-1-1">
                   <div id="vis1" class="vis-container"></div>
                 </div>
-              <p>         In year of <b>2020</b>, many country economy had been significantly impacted by the emerge of COVID-19, global pandemic. Compared to 2019, the global GDP growth was majorly reduced. As shown in the map, most of the country like China, United State, Canada and etc. get affected by the pandemic. <b class="au">Australia</b> was unable to escape from the list as well. <b class="au">Australia</b>'s GDP growth had reduce by 4.2% compared to last year, 2019. The number might seeem small but in term of GDP, -4.2 was actually really bad and it will cause a series of bad chain effect like reduction in income, then follow by unemployment and so on.</p>
-              <p>         One of the major reason might be the travel ban and travel restriction. These restrictions had severly damanged the education, tourism and export industry (It affected other businesses as well). The worst part was that these industry were few of the major revenue of <b class="au">Australia</b>.</p>
+              <p class="m1">In year of <b>2020</b>, many country economy had been significantly impacted by the emerge of COVID-19, global pandemic. Compared to 2019, the global GDP growth was majorly reduced. As shown in the map, most of the country like China, United State, Canada and etc. get affected by the pandemic. <b class="au">Australia</b> was unable to escape from the list as well. <b class="au">Australia</b>'s GDP growth had reduce by 4.2% compared to last year, 2019. The number might seeem small but in term of GDP, -4.2 was actually really bad and it will cause a series of bad chain effect like reduction in income, then follow by unemployment and so on.</p>
+              <p class="m1">One of the major reason might be the travel ban and travel restriction. These restrictions had severly damanged the education, tourism and export industry (It affected other businesses as well). The worst part was that these industry were few of the major revenue of <b class="au">Australia</b>.</p>
             </div>
           </div>
       </div>
