--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
          padding-top: 35px;
       }
       .p1{
+        width: 70%;
         color: lightgray;
         text-align: center;
         margin-left: auto;
