--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
          padding-top: 35px;
       }
       .p1{
-        width: 70%;
-        color: lightgray;
+        width: 90%;
+        color: gray;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
