--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       .description-left{
         padding-right: 20px;
       }
+      .description-right{
+        padding-lrft: 20px;
+      }
       .pure-g{
         margin-bottom: 25px;
       }
@@ -111,7 +114,7 @@
           <div id="vis2"  class="vis-container"></div>
         </div>
         <div class="pure-u-1-3">
-          <div class="description description-right">
+          <div class="description-right">
             <h2>This is the second section</h2>
             <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
           </div>
