--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         padding-right: 20px;
       }
       .description-right{
-        padding-lrft: 20px;
+        padding-left: 20px;
       }
       .pure-g{
         margin-bottom: 25px;
