--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="pure-g">
         <div class="pure-u-1-3">
           <div class="description-left">
-            <h2>Unemployment Rate Over State in Australia in 2020</h2>
+            <h2>Unemployment Rate of States in 2020</h2>
             <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
           </div>
          </div>
