--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
       
     <!-- pure grid group -->
     <div class="pure-g">
-      <h2>Impact of COVID-19 to Local Industry</h2>
         <div class="pure-u-1-3">
           <div class="description-left">
             <h2>Unemployment Rate of States in 2020</h2>
@@ -130,6 +129,9 @@
       
     <!-- pure grid group -->
       <div class="pure-g">
+        <div class="pure-u-1-1">
+          <h2>Impact of COVID-19 on Australia Industry</h2>
+          </div>
           <div class="pure-u-1-1">
             <div id="vis3"  class="vis-container"></div>
           </div>
