--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       .au{
         color: #EC8769 
       }
+      .tas{
+        color: #cb181d
+      }
       .vis-container{
         width: 100%;
       }
@@ -101,8 +104,8 @@
                 <div class="pure-u-1-1">
                   <div id="vis1" class="vis-container"></div>
                 </div>
-              <p class="m1">In year of <b>2020</b>, many country economy had been significantly impacted by the emerge of COVID-19, global pandemic. Compared to 2019, the global GDP growth was majorly reduced. As shown in the map, most of the country like China, United State, Canada and etc. get affected by the pandemic. <b class="au">Australia</b> was unable to escape from the list as well. <b class="au">Australia</b>'s GDP growth had reduce by 4.2% compared to last year, 2019. The number might seeem small but in term of GDP, -4.2% was actually really bad and it will cause a series of bad chain effect like reduction in income, then follow by unemployment and so on.</p>
-              <p class="m1">One of the major reason might be the <b>travel ban</b> and <b>travel restriction</b>. These restrictions had severly damanged the education, tourism and export industry (It affected other businesses as well). The worst part was that these industry were few of the major revenue that contribute to economy of <b class="au">Australia</b>.</p>
+              <p class="m1">In year of <b>2020</b>, many country economy has been significantly impacted by the emerge of COVID-19, global pandemic. Compared to 2019, the global GDP growth is majorly reduced. As shown in the map, most of the country like China, United State, Canada and etc. get affected by the pandemic. <b class="au">Australia</b> is unable to escape from the list as well. <b class="au">Australia</b>'s GDP growth has reduce by 4.2% compared to last year, 2019. The number might seeem small but in term of GDP, -4.2% is actually really bad and it will cause a series of bad chain effect like reduction in income, then follow by unemployment and so on.</p>
+              <p class="m1">One of the major reason might be the <b>travel ban</b> and <b>travel restriction</b>. These restrictions have severly damanged the education, tourism and export industry (It affected other businesses as well). The worst part is that these industry are few of the major revenue that contribute to economy of <b class="au">Australia</b>.</p>
             </div>
           </div>
       </div>
@@ -113,7 +116,13 @@
         <div class="pure-u-1-3">
           <div class="description-left">
             <h2>Unemployment Rate of States in 2020</h2>
-            <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+            <p>Based on the choropleth map idiom on the right and the population size, <b class="tas">Tasmania</b> is heavily impacted by COVID-19 pandemic. The unemployment rate in <b class="tas">Tasmania</p> is 7.6% and that is 2.1% more compared to 2019.
+                Beside that, <b class="tas">Queensland</> get affected significantly with a 7.7% unemployment rate in 2020 so far. All the data is normalised and based on the population of each state.
+            </p>  
+              <p> 
+                The possible reason for the rising of unemplyment rate might due to the fact that businesses are either temporary closing or shut down due to the restriction and travel ban applied by the government.
+                
+            </p>
           </div>
          </div>
           <div class="pure-u-2-3">
