--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
       
     <!-- pure grid group -->
     <div class="pure-g">
-        <div class="pure-u-1-3">
+        <div class="pure-u-2-3">
           <div class="description-left">
             <h2>Unemployment Rate of States in 2020</h2>
             <p>Based on the choropleth map idiom on the right and the population size, <b class="tas">Tasmania</b> is heavily impacted by COVID-19 pandemic. The unemployment rate in <b class="tas">Tasmania</b> is 7.6% and that is 2.1% more compared to 2019.
                 Beside that, <b class="tas">Queensland</b> get affected significantly with a 7.7% unemployment rate in 2020 so far. All the data is normalised and based on the population of each state.
             </p>  
               <p> 
-                The possible reason for the rising of unemplyment rate might due to the fact that businesses are either temporary closing or shut down due to the restriction and travel ban applied by the government because of the pandemic.
-                
+                The possible reason for the rising of unemplyment rate might due to the fact that businesses are either <b>temporary closing</b> or <b>shut down</b> due to the restriction and travel ban applied by the government because of the pandemic.
+                To compensate with the closure, a lot of businesses have chosen to either <b>reduce the amount of employee</b> that is not crucial and <b>reduce the income</b> of overall hirerachy of employee in the company to cover the lost.
             </p>
           </div>
          </div>
