--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       .vis-container{
         width: 100%;
       }
+      .vis-container2
+      {
+        padding-top: 35px; 
+        width: 100%;
+      }
       .description h2, h1{
         margin-top:0px;
       }
@@ -126,7 +131,7 @@
           </div>
          </div>
           <div class="pure-u-2-3">
-            <div id="vis2"  class="vis-container"></div>
+            <div id="vis2"  class="vis-container2"></div>
           </div>
       </div>
     <!-- end pure grid group -->
