--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                 To compensate with the closure, a lot of businesses have chosen to either <b>reduce the amount of employee</b> that is not crucial and <b>reduce the income</b> of overall hirerachy of employee in the company to cover the lost.
             </p>
           </div>
+          
+          <div class="vis-container2">
+              
+          </div>
          </div>
           <div class="pure-u-2-3">
             <div id="vis2"  class="vis-container2"></div>
