--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       {
         padding-top: 50px; 
         width: 100%;
+        margin: auto;
       }
       .description h2, h1{
         margin-top:0px;
