--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </p>  
               <p> 
                 The possible reason for the rising of unemplyment rate might due to the fact that businesses are either <b>temporary closing</b> or <b>shut down</b> due to the restriction and travel ban applied by the government because of the pandemic.
-                To compensate with the closure, a lot of businesses have chosen to either <b>reduce the amount of employee</b> that is not crucial and <b>reduce the income</b> of overall hirerachy of employee in the company to cover the lost.
+                To compensate with the closure, a lot of businesses have chosen to either <b>reduce the amount of employee</b> that is not crucial and <b>reduce the income</b> of overall hirerachy of employee in the company to cover the lost. Meanwhile, underemployment will take place where people are paid less than what they suppose to be paid for.
             </p>
           </div>
           
