--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        .page{
          width: 1000px;    
          background-color: white;   
-         margin: auto;
+         margin-top: 30px;
          padding: 50px;
          padding-top: 35px;
       }
