--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
           </div>
           <div class="pure-u-1-1">
             <div class="description description-bottom">
-              <p>This idiom clearly encode the impact of Covid-19 to local businesses as well as tourism related industry.</p> 
+              <p>This idiom clearly encode the impact of Covid-19 to local businesses. 
+                As seen in the chart, most industry that are related to tourism are having their revenue decreased due to the pandemic. Tourism industry lost more than <b class=
+"tas">70%</b> of their earning during the pandemic which almost make them lose everything. On the other hand, there exist increment on revenue as well but it would not be enough to cover to overall lost. Based on the chart and researches, the lost in revenue was mainly due to travel ban, law enforcement and border close (Movement Control) but not COVID-19 itself.
+                Based on the research, Australia earn roughly about <b>37.6 billion</b> from education industry. Meanwhile, education field get hit hard with a reduction of <b class="tas">87%<b> and that severely dragged the economy of Australia down. The lost had been fall more than what was anticipated and it might take several years to recover from the economical crisis in this pandemic. 
+              </p> 
             </div>
           </div>
 
