--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
         <div class="pure-u-1-3">
           <div class="description-left">
             <h2>Unemployment Rate of States in 2020</h2>
-            <p>Based on the choropleth map idiom on the right and the population size, <b class="tas">Tasmania</b> is heavily impacted by COVID-19 pandemic. The unemployment rate in <b class="tas">Tasmania</b> is 7.6% and that is 2.1% more compared to 2019.
+            <p class="p1">Based on the choropleth map idiom on the right and the population size, <b class="tas">Tasmania</b> is heavily impacted by COVID-19 pandemic. The unemployment rate in <b class="tas">Tasmania</b> is 7.6% and that is 2.1% more compared to 2019.
                 Beside that, <b class="tas">Queensland</b> get affected significantly with a 7.7% unemployment rate in 2020 so far. All the data is normalised and based on the population of each state.
             </p>  
-              <p> 
+              <p class="p1"> 
                 The possible reason for the rising of unemplyment rate might due to the fact that businesses are either <b>temporary closing</b> or <b>shut down</b> due to the restriction and travel ban applied by the government because of the pandemic.
                 To compensate with the closure, a lot of businesses have chosen to either <b>reduce the amount of employee</b> that is not crucial and <b>reduce the income</b> of overall hirerachy of employee in the company to cover the lost. Meanwhile, underemployment will take place where people are paid less than what they suppose to be paid for.
             </p>
@@ -151,7 +151,7 @@
           </div>
           <div class="pure-u-1-1">
             <div class="description description-bottom">
-              <p>This idiom clearly encode the impact of Covid-19 to local businesses. 
+              <p class="p1">This idiom clearly encode the impact of Covid-19 to local businesses. 
                 As seen in the chart, most industry that are related to tourism are having their revenue decreased due to the pandemic. Tourism industry lost more than <b class=
 "tas">70%</b> of their earning during the pandemic which almost make them lose everything. On the other hand, there exist increment on revenue as well but it would not be enough to cover to overall lost. Based on the chart and researches, the lost in revenue was mainly due to travel ban, law enforcement and border close (Movement Control) but not COVID-19 itself.
                 Based on the research, Australia earn roughly about <b>37.6 billion</b> from education industry. Meanwhile, education field get hit hard with a reduction of <b class="tas">87%</b> and that severely dragged the economy of Australia down. The lost had been fall more than what was anticipated and it might take several years to recover from the economical crisis in this pandemic. 
