--- a/index.html
+++ b/index.html
@@ -64,12 +64,6 @@
       .vis-container{
         width: 100%;
       }
-      .vis-container2
-      {
-        padding-top: 50px; 
-        width: 100%;
-        margin: auto;
-      }
       .description h2, h1{
         margin-top:0px;
       }
@@ -132,15 +126,15 @@
           </div>
          </div>
           <div class="pure-u-2-3">
-                      <br>
           <br>
-                      <br>
           <br>
-                                  <br>
           <br>
-                      <br>
           <br>
-            <div id="vis2"  class="vis-container2"></div>
+          <br>
+          <br>
+          <br>
+          <br>
+            <div id="vis2"  class="vis-container"></div>
           </div>
       </div>
     <!-- end pure grid group -->
