--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         text-indent: 30px;
       }
        .page{
-         width: 1000px;    
+         width: 850px;    
          background-color: white;   
-         margin-top: 30px;
+         margin: auto;
          padding: 50px;
          padding-top: 35px;
       }
